# multimoda-bioristor

./: README.md  dataset.py  model.py  pyproject.toml  requirements.txt  resnet_lstm_model.py  resnet_multimodal.py  test.py  test_resnet.py  test_resnet_lstm.py  test_transformer.py  train.py  train_resnet.py  train_resnet_lstm.py  train_transformer.py  transformer_model.py
scripts/: test_resnet_lstm.py  train_resnet_lstm.py
src/: __init__.py
src/examples/: __init__.py  gpu_example.py
src/models/: __init__.py  config.py  resnet.py  resnet_lstm.py
src/trainers/: __init__.py  resnet_lstm_trainer.py  trainer.py
src/utils/: __init__.py  device.py  torch_utils.py  visualization.py
